...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LQQ-dE-kUT">
                                <rect key="frame" x="97" y="682" width="233" height="63"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="CONTINUE">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="24"/>
                                    <color key="baseBackgroundColor" red="0.3849633146" green="0.2865035266" blue="0.89338699489999995" alpha="0.79595039582789118" colorSpace="custom" customColorSpace="displayP3"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <integer key="value" value="90"/>
...
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eUc-dr-Gzc">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.55068590780000004" green="0.76618500040000004" blue="0.80726533759999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter City Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7hs-sg-UE1">
                                <rect key="frame" x="70" y="484.5" width="273" height="34"/>
                                <color key="backgroundColor" systemColor="systemGray4Color"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tGv-ot-hxf">
                                <rect key="frame" x="83" y="753.5" width="247" height="55"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="55" id="9fX-bL-Tbn"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Check">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                    <color key="baseForegroundColor" systemColor="systemBackgroundColor"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="checkBtn:" destination="FcN-B7-L1r" eventType="touchUpInside" id="q7t-Un-Lys"/>
                                </connections>
...
                            </label>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CYF-Q3-3qK">
                                <rect key="frame" x="83" y="94" width="248" height="32"/>
                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <segments>
                                    <segment title="Daily"/>
                                    <segment title="Hourly"/>
                                </segments>
                                <connections>
                                    <action selector="checkTypeOfForecast:" destination="FcN-B7-L1r" eventType="valueChanged" id="umZ-QX-HW5"/>
                                </connections>
                            </segmentedControl>
                            <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dg4-32-jl2">
...
                                <menu key="menu" id="oxI-Wf-gp1">
                                    <children>
                                        <command title="Item 1" id="a4o-JD-fIm"/>
                                        <command title="Item 2" id="RXo-ND-CCh"/>
                                    </children>
                                </menu>
                                <state key="normal" title="Select Temperature Unit"/>
                                <buttonConfiguration key="configuration" style="gray" title="Select Temperature Unit">
                                    <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="preferance:" destination="FcN-B7-L1r" eventType="touchUpInside" id="qUX-1O-8YB"/>
                                </connections>
...
