...
    @IBOutlet weak var cityPicker: UIPickerView!
    
    @IBOutlet weak var PickerBg: UIImageView!
    
    @IBOutlet weak var showMenuButton: UIButton!
    @IBOutlet weak var check: UIButton!
    let cityList = ["Bangalore", "Mumbai", "Delhi", "Hyderabad"]
    let typeofForecast = ["daily","hourly"]
    var isValid = false
    var selectedCity = ""
    var selectedlat:Double = 0.0
    var selectedLong:Double = 0.0
    var selectedForecastType = "daily"
...
            isValid = true
            check.isEnabled = true
        }
    func configureButtonMenu(){
        var menuItems: [UIAction] {
            return [
                UIAction(title: "Celsius", image: UIImage(named: "degree-celsius"), handler: { (unit) in
                    self.selectedUnit = "metric"
                    self.showMenuButton.setTitle("Selected : Celsius", for: .normal)
                    self.showMenuButton.titleLabel?.font = UIFont.boldSystemFont(ofSize: 22)
                    print("Choosen Unit is \(self.selectedUnit)")
                }),
                UIAction(title: "Fahrenheit", image: UIImage(named: "degree-fahrenheit"), handler: { (_) in
...
